# messpa

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile  test_auth_httpx.py
backend/migrations/2026-03-29-163737_setup_db/: down.sql  up.sql
backend/migrations/2026-04-05-180812_create_refresh_sessions/: up.sql
backend/src/: api_response.rs  bot.rs  config.rs  error.rs  main.rs  metrics.rs  openapi.rs  routes.rs  schema.rs  state.rs
backend/src/handlers/: auth.rs  user.rs
backend/src/middleware/: admin.rs  auth.rs  mod.rs  rate_limit.rs
backend/src/models/: user.rs
backend/src/utils/: jwt.rs  mail.rs  mod.rs  rate_limit.rs  telegram.rs  token.rs
backend/tests/: test_auth.sh
frontend/: Dockerfile
k8s/: backend-deployment.yaml  backend-service.yaml  certbot-conf-persistentvolumeclaim.yaml  certbot-deployment.yaml  certbot-webroot-persistentvolumeclaim.yaml  frontend-deployment.yaml  frontend-service.yaml  grafana-data-persistentvolumeclaim.yaml  grafana-deployment.yaml  grafana-service.yaml  loki-cm0-configmap.yaml  loki-data-persistentvolumeclaim.yaml  loki-deployment.yaml  loki-service.yaml  nginx-claim1-persistentvolumeclaim.yaml  nginx-cm0-configmap.yaml  nginx-deployment.yaml  nginx-exporter-deployment.yaml  nginx-exporter-service.yaml  nginx-service.yaml  postfix-deployment.yaml  postfix-service.yaml  postgres-data-persistentvolumeclaim.yaml  postgres-deployment.yaml  postgres-service.yaml  prometheus-cm0-configmap.yaml  prometheus-data-persistentvolumeclaim.yaml  prometheus-deployment.yaml  prometheus-service.yaml  promtail-cm1-configmap.yaml  promtail-deployment.yaml  redis-data-persistentvolumeclaim.yaml  redis-deployment.yaml  redis-service.yaml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yml
nginx/: nginx.conf
storage/: Cargo.toml  Dockerfile
storage/src/: config.rs  main.rs  state.rs
storage/src/handlers/: delete.rs  upload.rs
storage/src/utils/: clamav.rs  compress.rs  mime.rs  mod.rs
