[package]
name = "freelance-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["json", "macros"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
bigdecimal = { version = "0.4.10", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.20"
deadpool = "0.12.3"
diesel = { version = "2.2.12", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "network-address"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
governor = { version = "0.10.4", features = ["std"] }
ipnetwork = "0.21.1"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.19", features = ["smtp-transport"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
r2d2 = "0.8.10"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
teloxide = "0.17.0"
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
